# simple_podcast

./: .gitignore  .pre-commit-config.yaml  Readme.md  default.nix  flake.nix  models.py  module.nix  pyproject.toml  requirements.nix  requirements.txt  requirements_frozen.txt  schemas.py  settings.py  simplepodcast.py  utils.py
.direnv/: flake-profile-1-link
simplepodcast/: __init__.py  __main__.py  database.py  models.py  settings.py  simplepodcast.py  utils.py
