[tool.poetry]
name = "simplepodcast"
version = "0.1.0"
description = ""
authors = ["Jakob Klepp <jakob-github@truh.in>"]
readme = "Readme.md"

[tool.poetry.scripts]
start-simplepodcast = "simplepodcast:main"

[tool.poetry.dependencies]
python = ">=3.8,<4"
aiofiles = "^23.2.1"
fastapi = "^0.105.0"
podgen = "^1.1.0"
pydantic = "^2.5.3"
python-multipart = "^0.0.6"
SQLAlchemy = "^2.0.23"
uvicorn = "^0.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
